--- a/public/signup.html
+++ b/public/signup.html
@@ -58,7 +58,7 @@
                     <button type="submit" class="btn btn-primary">Sign Up</button>
                 </form>
                 <br />
-                <small>Already have an account? <a href="#">Login</a></small>
+                <small>Already have an account? <a href="/login">Login</a></small>
             </div>
         </div>
     </div>
