--- a/public/members.html
+++ b/public/members.html
@@ -5,7 +5,7 @@
     <title>Passport Authentication</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" sizes="16x16" href="image/logo.ico">
 </head>
@@ -14,9 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
+                <a class="navbar-brand" href="/logout">Logout</a>
             </div>
         </div>
     </nav>
@@ -24,6 +22,13 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h2>Welcome <span class="member-name"></span></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="placeholder">
+                    <p>CALENDAR WILL GO HERE</p>
+                </div>
             </div>
         </div>
     </div>
