added calendar placeholder and support styling

--- a/public/members.html
+++ b/public/members.html
@@ -24,13 +24,15 @@
                 <h2>Welcome <span class="member-name"></span></h2>
             </div>
         </div>
+        <br>
         <div class="row">
-            <div class="col-md-12">
-                <div class="placeholder">
+            <div class="col-md-8 mid">
+                <div class="placeholder cal">
                     <p>CALENDAR WILL GO HERE</p>
                 </div>
             </div>
         </div>
+        <br>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
