updated and standardized header, added formatting, and stylng

--- a/public/signup.html
+++ b/public/signup.html
@@ -19,16 +19,20 @@
             <img id="brand-image" src="image/logo.png" alt="perfecttime">
             </div>
             <li class="nav-item">
-                <a class="nav-link active" href="signup.html">About</a>
+                <a class="nav-link active" href="/">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="calendar.html">Calendar</a>
+                <a class="nav-link" href="/members">Calendar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Graph">Graph</a>
+                <a class="nav-link" href="/charts">Graph</a>
+            </li>
+            <li>
+                <a class="nav-link right" href="/logout">Logout</a>
             </li>
         </ul>
     </nav>
+    <br>
     <div class="jumbotron">
         <h1 class="display-3">Now is the Time!</h1>
         <br>
