--- a/public/login.html
+++ b/public/login.html
@@ -12,11 +12,24 @@
 
 <body>
     <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
+        <ul class="nav justify-content-center">
+            <img id="brand-image" src="image/logo.png" alt="perfecttime">
             </div>
-        </div>
+            <li class="nav-item">
+                <a class="nav-link active" href="/">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/members">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/charts">Graph</a>
+            </li>
+            <li>
+                <a class="nav-link right" href="/logout">Logout</a>
+            </li>
+        </ul>
     </nav>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
