swapped signup and login page, changed details

--- a/public/login.html
+++ b/public/login.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="icon" sizes="16x16" href="image/logo.ico">
+    <link rel="icon" sizes="16x16" href="images/logo.ico">
 </head>
 
 <body>
     <nav class="navbar navbar-default">
         <ul class="nav justify-content-center">
-            <img id="brand-image" src="image/logo.png" alt="perfecttime">
+            <img id="brand-image" src="images/logo.png" alt="perfecttime">
             </div>
             <li class="nav-item">
                 <a class="nav-link active" href="/">About</a>
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="/members">Calendar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/charts">Graph</a>
+                <a class="nav-link" href="/charts">Charts</a>
             </li>
             <li>
                 <a class="nav-link right" href="/logout">Logout</a>
@@ -30,6 +30,23 @@
         </ul>
     </nav>
     <br>
+    
+    <div class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h1 class="display-3 ">Now is the Time!</h1>
+                    <br>
+                    <p class="lead ">A fertility tracking app, with a co-creative sharing
+                        <br> option.</p>
+                    <br>
+                    <a class="btn btn-primary btn-lg " href="#" role="button">Learn more</a>
+                    </p>
+                </div>
+            </div> 
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -45,7 +62,8 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
-                <p> Or sign up <a href="/">here</a></p>
+                <br>
+                <p> Or sign up <a href="/signup">here</a></p>
             </div>
         </div>
     </div>
