--- a/public/charts.html
+++ b/public/charts.html
@@ -10,13 +10,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
-    <link rel="icon" sizes="16x16" href="image/logo.ico">
+    <link rel="icon" sizes="16x16" href="images/logo.ico">
 </head>
 
 <body>
     <nav class="navbar navbar-default">
         <ul class="nav justify-content-center">
-            <img id="brand-image" src="image/logo.png" alt="perfecttime">
+            <img id="brand-image" src="images/logo.png" alt="perfecttime">
             </div>
             <li class="nav-item">
                 <a class="nav-link active" href="/">About</a>
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="/members">Calendar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/charts">Graph</a>
+                <a class="nav-link" href="/charts">Charts</a>
             </li>
             <li>
                 <a class="nav-link right" href="/logout">Logout</a>
