--- a/public/login.html
+++ b/public/login.html
@@ -50,9 +50,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Login Form</h2>
-                <form class="login">
-                    <div class="form-group">
+                <h2>Login With Google</h2>
+                <!-- <form class="login"> -->
+                  <!--   <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="email-input" placeholder="Email">
                     </div>
@@ -63,7 +63,8 @@
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
                 <br>
-                <p> Or sign up <a href="/signup">here</a></p>
+                <p> Or sign up <a href="/signup">here</a></p> -->
+                <a class="btn btn-primary btn-lg google-btn p-3 mb-2 bg-danger text-white" href="/auth/google">Google</a>
             </div>
         </div>
     </div>
