--- a/public/login.html
+++ b/public/login.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="/charts">Charts</a>
             </li>
             <li>
-                <a class="nav-link right" href="/logout">Logout</a>
+                <a class="nav-link right" href="/auth/logout">Logout</a>
             </li>
         </ul>
     </nav>
