front-end cupdate

--- a/public/about.html
+++ b/public/about.html
@@ -10,26 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
+    <!-- Favicon -->
     <link rel="icon" sizes="16x16" href="images/logo.ico">
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="nav">
         <ul class="nav justify-content-center">
-            <img id="brand-image" src="images/logo.png" alt="perfecttime">
-            </div>
-            <li class="nav-item">
-                <a class="nav-link active" href="/">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/members">Calendar</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/charts">Graph</a>
-            </li>
-            <li>
-                <a class="nav-link right" href="/auth/logout">Logout</a>
-            </li>
+            <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
         </ul>
     </nav>
     <br>
@@ -86,8 +74,8 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-5 p-0">
             <div class="image-holder text-center">
-              <img class="animated fadeIn" src="#"></a>
-              <p class="team-name">Kimmy</p>
+              <img class="animated fadeIn" src="images/kimmy.png"></a>
+              <p class="team-name">Kimarie Haverty-Bozman</p>
             </div>
           </div>
         </div>
@@ -121,7 +109,7 @@
   </div>
     
     <br>
-    <!-- Footer -->
+
   <!-- Copyright-->
           <div class="footer-copyright py-3 text-center">
               <div class="container-fluid">
