--- a/public/login.html
+++ b/public/login.html
@@ -11,22 +11,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="nav">
         <ul class="nav justify-content-center">
-            <img id="brand-image" src="images/logo.png" alt="perfecttime">
-            </div>
-            <li class="nav-item">
-                <a class="nav-link active" href="/">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/members">Calendar</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/charts">Charts</a>
-            </li>
-            <li>
-                <a class="nav-link right" href="/auth/logout">Logout</a>
-            </li>
+            <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
         </ul>
     </nav>
     <br>
@@ -40,7 +27,7 @@
                     <p class="lead ">A fertility tracking app, with a co-creative sharing
                         <br> option.</p>
                     <br>
-                    <a class="btn btn-primary btn-lg " href="#" role="button">Learn more</a>
+                    <a class="btn btn-primary btn-lg " href="about.html" role="button">Learn more</a>
                     </p>
                 </div>
             </div> 
@@ -50,24 +37,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Login With Google</h2>
-                <!-- <form class="login"> -->
-                  <!--   <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="email-input" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="password-input" placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
-                <br>
-                <p> Or sign up <a href="/signup">here</a></p> -->
-                <a class="btn btn-primary btn-lg google-btn p-3 mb-2 bg-danger text-white" href="/auth/google">Google</a>
+                <a href="/auth/google"><img src="images/google signin.png" width="250" height=75"></a>
             </div>
         </div>
     </div>
+
+    <br><br>
 <!-- Footer -->
            <div class="footer-copyright py-3 text-center">
               <div class="container-fluid">
