--- a/public/members.html
+++ b/public/members.html
@@ -15,17 +15,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="nav">
         <ul class="nav justify-content-center">
-            <img id="brand-image" src="images/logo.png" alt="perfecttime">
+            <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
             <li class="nav-item">
-                <a class="nav-link active" href="/about">About</a>
+                <a class="nav-link active" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/members">Calendar</a>
+                <a class="nav-link" href="/members.html">Calendar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/charts">Charts</a>
+                <a class="nav-link" href="/charts.html">Charts</a>
             </li>
             <li>
                 <a class="nav-link right" href="/auth/logout">Logout</a>
