--- a/public/charts.html
+++ b/public/charts.html
@@ -44,7 +44,7 @@
     <div class="row">
         <div class="col-md-10 mid">
             <div class="chart-container-1 placeholder">
-                <H2>CYCLES</H2>
+                <H2>CYCLE</H2>
                 <canvas id="cycle-chart">
                 </canvas>
             </div>
@@ -65,76 +65,80 @@
     <!-- New User Input -->
     <div class="row">
         <div class="col-md-10 mid">
-            <h2 class="placeholder">User Inputs</h2>
             <div class="container">
-        <div class="page-header">
-            <h1> New User Input</h1>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><strong>Questionnaire</strong></h3>
-            </div>
-            <div class="panel-body">
-                <h4><strong> When did you have your last period?</strong></h4>
-                <input id="date" type="date">
-                <h4><strong> How long are your cycles?</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="Q1">
-                    <option value=""></option>
-                    <option value="14">14 days</option>
-                    <option value="15">15 days</option>
-                    <option value="16">16 days</option>
-                    <option value="17">17 days</option>
-                    <option value="18">18 days</option>
-                    <option value="19">19 days</option>
-                    <option value="20">20 days</option>
-                    <option value="21">21 days</option>
-                    <option value="22">22 days</option>
-                    <option value="23">23 days</option>
-                    <option value="24">24 days</option>
-                    <option value="25">25 days</option>
-                    <option value="26">26 days</option>
-                    <option value="27">27 days</option>
-                    <option value="28">28 days (Average Cycle)</option>
-                    <option value="29">29 days</option>
-                    <option value="30">30 days</option>
-                    <option value="31">32 days</option>
-                    <option value="33">33 days</option>
-                    <option value="34">34 days</option>
-                    <option value="35">35 days</option>
-                    <option value="36">36 days</option>
-                    <option value="37">37 days</option>
-                    <option value="38">38 days</option>
-                    <option value="39">39 days</option>
-                    <option value="40">40 days</option>
+                <div class="page-header">
+                    <h1> New User Input</h1>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><strong>General Cycle Information</strong></h3>
+                    </div>
+                <div class="panel-body">
+                    <h4><strong> What was the first day of your last period?</strong></h4>
+                    <input id="date" type="date">
+                    <h4 id="cycle-length"><strong>What is your average cycle length?</strong></h4>
+                    <select data-placeholder="" class="chosen-select" id="Q1">
+                        <option value=""></option>
+                        <option value="14">14 days</option>
+                        <option value="15">15 days</option>
+                        <option value="16">16 days</option>
+                        <option value="17">17 days</option>
+                        <option value="18">18 days</option>
+                        <option value="19">19 days</option>
+                        <option value="20">20 days</option>
+                        <option value="21">21 days</option>
+                        <option value="22">22 days</option>
+                        <option value="23">23 days</option>
+                        <option value="24">24 days</option>
+                        <option value="25">25 days</option>
+                        <option value="26">26 days</option>
+                        <option value="27">27 days</option>
+                        <option value="28">28 days (Average Cycle)</option>
+                        <option value="29">29 days</option>
+                        <option value="30">30 days</option>
+                        <option value="31">32 days</option>
+                        <option value="33">33 days</option>
+                        <option value="34">34 days</option>
+                        <option value="35">35 days</option>
+                        <option value="36">36 days</option>
+                        <option value="37">37 days</option>
+                        <option value="38">38 days</option>
+                        <option value="39">39 days</option>
+                        <option value="40">40 days</option>
                    </select>
-                 <h4><strong> Are you trying to conceive?</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="Q1">
-                    <option value="1">yes</option>
-                    <option value="2">no</option>
-                </select>
+                </div>
             </div>
-        </div>
      <!--  Submit Button -->
         <button id="submitButton" type="submit" class="btn btn-primary">
             <h4>Submit</h4></button>
 
             <!-- Daily Input -->
-            <div class="container">
-        <div class="page-header">
-            <h1> Daily Input</h1>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><strong>Questionnaire</strong></h3>
+        <div class="container">
+            <div class="page-header">
+                <h1> Daily Input</h1>
             </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><strong>Cycle Specifics</strong></h3>
+                </div>
             <div class="panel-body">
-            <div id="page">
-                <h4><strong>Today's Date<strong></h4>
-                <div id="clock" class="clock"></div>
+                <div id="page">
+                    <h4><strong>Today's Date<strong></h4>
+                    <div id="clock" class="clock"></div>
                 <br>
-                <h4><strong>Basal Body Temperature(BBT) in degrees Fahrenheit.</strong></h4>
+                    <div class="row">
+                        <div class='col-sm-6'>
+                            <div class="form-group">
+                                <h4><strong>Date of Information<strong></h4>
+                                    <input class="date-input" type="date">
+                            </div>
+                        </div>
+                    </div>
+
+
+                <h4 id="temp-heading"><strong>Basal Body Temperature(BBT) in degrees Fahrenheit.</strong></h4>
                 <input type="text" name="temp" placeholder="98" id="Q1">
-                <h4><strong>Mood</strong></h4>
+                <h4 id="mood-heading"><strong>Mood</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q2">
                <!--      <option value=""></option> -->
                     <option value="1">1 (Sad)</option>
@@ -148,7 +152,7 @@
                     <option value="9">9</option>
                     <option value="10">10 (Happy)</option>
                 </select>
-                <h4><strong>Energy Level</strong></h4>
+                <h4 id="energy-heading"><strong>Energy Level</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q3">
                     <option value="1">1 (Low)</option>
                     <option value="2">2</option>
@@ -161,12 +165,13 @@
                     <option value="9">9</option>
                     <option value="10">10 (High)</option>
                 </select>
-                <h4><strong>Symptoms</strong></h4>
+                <h4 id="symptoms-heading"><strong>Symptoms</strong></h4>
                 <select class="selectpicker" data-style="btn-primary" multiple data-max-options="4">
                     <option>Light Spotting</option>
                     <option>Cramping</option>
                     <option>Breast Tenderness</option>
                     <option>No Appetite</option>
+                    <option>Nausea</option>
                 </select>
                 <br>
                 <br>
@@ -175,24 +180,29 @@
                     <option value="1">Dry Phase</option>
                     <option value="2">Sticky Phase</option>
                     <option value="3">Creamy Phase</option>
-                    <option value="4">Clear Phase</option>
+                    <option value="4">Clear/Stretchy Phase</option>
                 </select>
                 <br>
-                <h4><strong>Intercourse</strong></h4>
+                <h4 id="intercourse-heading"><strong>Intercourse</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q5">
+                    <option value="0">Not Applicable</option>
                     <option value="1">Protected</option>
                     <option value="2">Unprotected</option>
                 </select>
                 <br>
-                   <h4><strong>Conception Method</strong></h4>
+                   <h4 id="conception-heading"><strong>Conception Method</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q6">
+                    <option value="0">Not Applicable</option>
                     <option value="1">Intrauterine Insemination (IUI)</option>
                     <option value="2">Intravaginal Insemination (IVI)</option>
                     <option value="3"> In vitro fertilisation (IVF)</option>
                 </select>
                 <br>
-                <h4><strong>Medications</strong></h4>
+                <h4 id="medications-heading"><strong>Medications</strong></h4>
                 <input type="text" name="medication" id="Q7" placeholder="List them here">
+                <br>
+                <h4 id="supplements-heading"><strong>Supplements</strong></h4>
+                <input type="text" name="supplements" id="Q7" placeholder="List them here">
     </div>
 </div>
 </div>
