--- a/public/login.html
+++ b/public/login.html
@@ -37,10 +37,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <a href="/auth/google"><img src="images/google signin.png" width="250" height=75"></a>
+                <a href="/auth/google"><img src="images/google signin.png" width="250" height="75"></a>
             </div>
         </div>
     </div>
+</div>
 
     <br><br>
 <!-- Footer -->
