--- a/public/about.html
+++ b/public/about.html
@@ -16,9 +16,9 @@
 
 <body>
     <nav class="nav">
-        <ul class="nav justify-content-center">
+        <div class="nav justify-content-center">
             <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
-        </ul>
+        </div>
     </nav>
     <br>
 
@@ -36,7 +36,7 @@
     </div>
 <br>
    <div class="container">
-  <h2 style="color: #ff6666;""><center>Who we are<center></h2>
+  <h2 style="color: #ff6666;"><center>Who we are<center></h2>
   <p><center> Perfect Time is a company based in Berkeley. We were founded in 2018. We are the fastest growing startup.<center></p>
 </div>
 <br>
@@ -49,7 +49,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-5 p-0">
             <div class="image-holder text-center ">
-                <img class="animated fadeIn" src="images/daniel.jpg"></a>
+                <img class="animated fadeIn" src="images/daniel.jpg" alt="daniel">
               <p class="team-name">Daniel Murray</p>
             </div>
           </div>
@@ -60,7 +60,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-5 p-0">
             <div class="image-holder text-center">
-            <img class="animated fadeIn" src="images/frank.jpg"></a>
+            <img class="animated fadeIn" src="images/frank.jpg" alt="frank">
               <p class="team-name">Frank Valdez</p>
             </div>
           </div>
@@ -74,7 +74,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-5 p-0">
             <div class="image-holder text-center">
-              <img class="animated fadeIn" src="images/kimmy.png"></a>
+              <img class="animated fadeIn" src="images/kimmy.png" alt="kimmy">
               <p class="team-name">Kimarie Haverty-Bozman</p>
             </div>
           </div>
@@ -85,7 +85,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-5 p-0">
             <div class="image-holder text-center">
-              <img class="animated fadeIn" src="images/julie.jpg"></a>
+              <img class="animated fadeIn" src="images/julie.jpg" alt="julie">
               <p class="team-name">Julie Nguyen</p>
             </div>
           </div>
@@ -99,7 +99,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-5 p-0">
             <div class="image-holder text-center">
-              <img class="animated fadeIn" src="images/konstantin.png"></a>
+              <img class="animated fadeIn" src="images/konstantin.png" alt="konstantin">
               <p class="team-name">Konstantin Tikhonov</p>
             </div>
           </div>
