--- a/public/login.html
+++ b/public/login.html
@@ -12,9 +12,9 @@
 
 <body>
     <nav class="nav">
-        <ul class="nav justify-content-center">
+        <div class="nav justify-content-center">
             <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
-        </ul>
+        </div>
     </nav>
     <br>
     
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <a href="/auth/google"><img src="images/google signin.png" width="250" height=75"></a>
+                <a href="/auth/google"><img src="images/googlesignin.png" width="250" height="75" alt="googlesignin"></a>
             </div>
         </div>
     </div>
