--- a/public/charts.html
+++ b/public/charts.html
@@ -130,7 +130,7 @@
                         <div class='col-sm-6'>
                             <div class="form-group">
                                 <h4><strong>Date of Information<strong></h4>
-                                    <input class="date-input" type="date">
+                                    <input class="date-input" id="date-input" type="date">
                             </div>
                         </div>
                     </div>
@@ -166,8 +166,8 @@
                     <option value="10">10 (High)</option>
                 </select>
                 <h4 id="symptoms-heading"><strong>Symptoms</strong></h4>
-                <select class="selectpicker" data-style="btn-primary" multiple data-max-options="4">
-                    <option>Light Spotting</option>
+                <select class="selectpicker" data-style="btn-primary" multiple data-max-options="4" id="Q4">
+                    <option>Spotting</option>
                     <option>Cramping</option>
                     <option>Breast Tenderness</option>
                     <option>No Appetite</option>
@@ -176,7 +176,7 @@
                 <br>
                 <br>
                 <h4><strong>Cervical Mucus</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="Q4">
+                <select data-placeholder="" class="chosen-select" id="Q5">
                     <option value="1">Dry Phase</option>
                     <option value="2">Sticky Phase</option>
                     <option value="3">Creamy Phase</option>
@@ -184,30 +184,30 @@
                 </select>
                 <br>
                 <h4 id="intercourse-heading"><strong>Intercourse</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="Q5">
+                <select data-placeholder="" class="chosen-select" id="Q6">
                     <option value="0">Not Applicable</option>
                     <option value="1">Protected</option>
                     <option value="2">Unprotected</option>
                 </select>
                 <br>
                    <h4 id="conception-heading"><strong>Conception Method</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="Q6">
-                    <option value="0">Not Applicable</option>
-                    <option value="1">Intrauterine Insemination (IUI)</option>
-                    <option value="2">Intravaginal Insemination (IVI)</option>
-                    <option value="3"> In vitro fertilisation (IVF)</option>
+                <select data-placeholder="" class="chosen-select" id="Q7">
+                    <option value="1">Not Applicable</option>
+                    <option value="2">Intrauterine Insemination (IUI)</option>
+                    <option value="3">Intravaginal Insemination (IVI)</option>
+                    <option value="4"> In vitro fertilisation (IVF)</option>
                 </select>
                 <br>
                 <h4 id="medications-heading"><strong>Medications</strong></h4>
-                <input type="text" name="medication" id="Q7" placeholder="List them here">
+                <input type="text" name="medication" id="Q8" placeholder="List them here">
                 <br>
                 <h4 id="supplements-heading"><strong>Supplements</strong></h4>
-                <input type="text" name="supplements" id="Q7" placeholder="List them here">
+                <input type="text" name="supplements" id="Q9" placeholder="List them here">
     </div>
 </div>
 </div>
         <!--  Submit Button -->
-        <button id="submitButton" type="submit" class="btn btn-primary">
+        <button id="submitButton2" type="submit" class="btn btn-primary">
             <h4>Submit</h4></button>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
    <script type="text/javascript" src="js/charts.js"></script>
