--- a/public/members.html
+++ b/public/members.html
@@ -43,32 +43,11 @@
         <div class="row">
             <div class="col-md-8 mid">
                 <div class="placeholder cal">
-                    <p>CALENDAR WILL GO HERE</p>
+                    <iframe src="https://calendar.google.com/calendar/embed?src=25q8a5nb29grsbvr2iq84fdeq0%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
         </div>
         <br>
-        <div class="row">
-            <div class="col-md-10 mid">
-                <a href="/charts"><p>See My Charts!!!</p></a>
-                <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
-                    <a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-2">Item2</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-                    <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
-                </div>
-<!-- <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
-  <h4 id="list-item-1">Item 1</h4>
-  <p>...</p>
-  <h4 id="list-item-2">Item 2</h4>
-  <p>...</p>
-  <h4 id="list-item-3">Item 3</h4>
-  <p>...</p>
-  <h4 id="list-item-4">Item 4</h4>
-  <p>...</p>
-</div> -->
-            </div>
-        </div>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
