Small html changes

--- a/public/charts.html
+++ b/public/charts.html
@@ -177,10 +177,10 @@
                 <br>
                 <h4><strong>Cervical Mucus</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q5">
-                    <option value="1">Dry Phase</option>
-                    <option value="2">Sticky Phase</option>
-                    <option value="3">Creamy Phase</option>
-                    <option value="4">Clear/Stretchy Phase</option>
+                    <option value="1">Dry</option>
+                    <option value="2">Sticky</option>
+                    <option value="3">Creamy</option>
+                    <option value="4">Clear/Stretchy</option>
                 </select>
                 <br>
                 <h4 id="intercourse-heading"><strong>Intercourse</strong></h4>
